<resources>
    <string name="app_name">Learn Animals</string>

    <string name="english" translatable="false">English</string>
    <string name="spanish" translatable="false">Espanol</string>
    <string name="french" translatable="false">Francais</string>
    <string name="italian" translatable="false">Italiano</string>
    <string name="romanian" translatable="false">Romana</string>
    <string name="title_change_volume">Change volume</string>
    <string name="text_ok" translatable="false">OK</string>
    <string name="text_cancel">CANCEL</string>
    <string name="text_done">DONE</string>
    <string name="title_congrats">Congratulations</string>
    <string name="title_good_job">Good job</string>
    <string name="text_game_finished">That\'s it, you found all the pairs of animals!</string>
    <string name="title_exit">EXIT</string>
    <string name="title_retry">RETRY</string>
    <string name="cat">cat</string>
    <string name="dog">dog</string>
    <string name="elephant">elephant</string>
    <string name="leopard">leopard</string>
    <string name="lion">lion</string>
    <string name="monkey">monkey</string>
    <string name="wolf">wolf</string>
    <string name="tiger">tiger</string>
    <string name="snake">snake</string>
    <string name="pig">pig</string>
    <string name="horse">horse</string>
    <string name="sheep">sheep</string>
    <string name="title_help" translatable="false">help</string>
    <string name="title_help_menu">Help</string>
    <string name="text_help">This is a matches game. You have to find the pairs of animal pictures that match. Good luck!</string>
    <string name="text_okgotit">OK, GOT IT</string>
    <string name="seal">seal</string>
    <string name="chicken">chicken</string>
    <string name="duck">duck</string>
    <string name="cow">cow</string>
    <string name="title_animal_count">Animal %d / %d</string>
    <string name="bear">bear</string>
    <string name="bee">bee</string>
    <string name="eagle">eagle</string>
    <string name="title_game_over">Game over</string>
    <string name="text_game_over">You reached the end of the puzzle game. Do you want to play again?</string>

</resources>
