<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:layout_gravity="center"
    android:background="@android:color/white"
    android:layout_margin="24dp"
    android:padding="16dp"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <TextView
        android:textColor="@android:color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        android:text="@string/title_help_menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:textSize="16sp"
        android:textColor="@android:color/black"
        android:text="@string/text_help"
        android:layout_marginTop="16dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <TextView
        android:textColor="@color/colorAccent"
        android:id="@+id/text_ok"
        android:layout_marginTop="16dp"
        android:layout_gravity="center"
        android:textSize="18sp"
        android:text="@string/text_okgotit"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
</LinearLayout>