<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:background="@android:color/white"
    android:layout_margin="28dp"
    android:padding="12dp"
    android:layout_gravity="center_vertical"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <ImageView
        android:src="@drawable/birdgameover"
        android:layout_gravity="center"
        android:layout_width="160dp"
        android:layout_height="90dp" />
    <TextView
        android:layout_gravity="center"
        android:textColor="@android:color/black"
        android:text="@string/title_game_over"
        android:textStyle="bold"
        android:textSize="28sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <TextView
        android:layout_marginTop="18dp"
        android:textColor="@android:color/black"
        android:text="@string/text_game_over"
        android:textSize="18sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <LinearLayout
        android:layout_gravity="end"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/no"
            android:text="@string/title_exit"
            android:textColor="@color/colorAccent"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_width="wrap_content"
            android:layout_marginRight="24dp"
            android:layout_marginEnd="24dp"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/yes"
            android:text="@string/title_retry"
            android:textColor="@color/colorAccent"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
</LinearLayout>