<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:layout_gravity="center"
    android:background="@android:color/white"
    android:layout_margin="24dp"
    android:padding="16dp"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <TextView
        android:textColor="@android:color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        android:text="@string/title_change_volume"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <SeekBar
        android:theme="@style/SeekBarColorStyle"
        android:layout_marginTop="16dp"
        android:id="@+id/seekbar_volume"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
    <LinearLayout
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        android:gravity="end"
        android:layout_gravity="end"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:textColor="@color/colorAccent"
            android:id="@+id/text_cancel"
            android:textSize="18sp"
            android:text="@string/text_cancel"
            android:textStyle="bold"
            android:layout_marginRight="24dp"
            android:layout_marginEnd="24dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:textColor="@color/colorAccent"
            android:id="@+id/text_done"
            android:textSize="18sp"
            android:text="@string/text_done"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
</LinearLayout>